add members informations and begin of projects
