# backend/src/routes/member.js
@@ -3,8 +3,11 @@ const router = express.Router()
 const member = require('../controllers/member.js')
 const access = require('../controllers/access.js')
 
-// Get All members
+// Get All members names and emails
 router.get('/api/members', access.verifyTokenPresent, member.getMembers)
+// Get All members informations
+router.get('/api/membersInfo', access.verifyTokenPresent, member.getMembersInfo)
+
 // Add new member
 router.post('/api/members', access.verifyTokenPresent, access.isAdmin, member.newMember)
 // Update member's information
